proxy/envoy/envoy.yaml
static_resources:
  listeners:
    - name: http_listener
      address: { socket_address: { address: 0.0.0.0, port_value: 80 } }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: victim }
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: victim
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: victim
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: victim, port_value: 8080 }
